--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,29 +9,29 @@
   "main": "app.js",
   "dependencies": {
     "@azure/cosmos": "^2.1.7",
-    "async": "^3.1.0",
+    "async": "^3.2.0",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
-    "express-session": "^1.16.2",
-    "gremlin": "^3.4.3",
+    "express-session": "^1.17.1",
+    "gremlin": "^3.4.8",
     "jade": "^1.11.0",
-    "morgan": "^1.9.1",
+    "morgan": "^1.10.0",
     "numeral": "^2.0.6",
     "pug": "^2.0.4",
-    "request": "^2.88.0",
-    "uuid": "^3.3.3"
+    "request": "^2.88.2",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
-    "grunt": "^1.0.4",
-    "grunt-develop": "^0.4.0",
+    "clean-css": "^4.2.3",
+    "constantinople": "^4.0.1",
+    "grunt": "^1.2.1",
     "grunt-contrib-stylus": "^1.0.0",
+    "grunt-develop": "^0.4.0",
     "load-grunt-tasks": "^5.1.0",
-    "underscore.string": ">=3.3.5",
-    "constantinople": ">=3.1.1",
-    "clean-css": ">=4.1.11",
-    "lodash": ">=4.17.13"
+    "lodash": "^4.17.19",
+    "underscore.string": ">=3.3.5"
   },
   "scripts": {
     "start": "node bin/www"
