--- a/BOMClient/BOMClient.csproj
+++ b/BOMClient/BOMClient.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <!-- cj, 2021/01/08: changed from 'netcoreapp3.1' to 'net5.0' -->
+  
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.12.0" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.15.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Gremlin.Net" Version="3.4.8" />
+    <PackageReference Include="Gremlin.Net" Version="3.4.9" />
   </ItemGroup>
 
 </Project>
