--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "grunt-develop": "^0.4.0",
     "load-grunt-tasks": "^5.1.0",
     "lodash": "^4.17.21",
+    "set-value": ">=4.0.1",
     "underscore.string": ">=3.3.5"
   },
   "scripts": {
